<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_name_hint">Enter your username...</string>
    <string name="title_login_password">Password:</string>
    <string name="title_remember_password">Remember password?</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_loginlabel">WELCOME TO GLOVE SHOP!</string>
    <string name="title_password_hint">Enter your password...</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="login_failed_message">Login failed! Check your account again!</string>
    <string name="press_back_again_to_exit">Please click BACK again to exit</string>
    <string name="title_add_employee">Add Employee</string>
    <string name="title_add_employee_title">Add Employee now!</string>
    <string name="title_healthcare">Healthcare</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare_title">Employee Healthcare</string>
    <string name="title_height">Height (cm)</string>
    <string name="title_weight">Weight (kg)</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_product">Products</string>
    <string name="title_advanced_products">Advanced Products</string>
    <string name="title_new_customer">New customer</string>
    <string name="title_broadcast_advertising">Broadcast advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer name:</string>
    <string name="title_customer_email">Customer email:</string>
    <string name="title_customer_phone">Customer phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_search_product">Search product</string>
    <string name="title_new_product">New product</string>
    <string name="title_product_id">Product ID</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_name">Product Name</string>
    <string name="title_product_quantity">Product Quantity</string>
    <string name="title_product_price">Product Price</string>
    <string name="title_product_cate_id">Product Catrgory ID</string>
    <string name="title_product_image_id">Product Image</string>



</resources>