<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".k22411csampleproject.ProductDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_detail"
            android:textAlignment="center"
            android:textColor="#00BCD4"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8CFF9800"
            android:text="@string/title_product_id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#62FFEB3B"
            android:text="@string/title_product_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7ECDDC39"
            android:text="@string/title_product_quantity"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9D8BC34A"
            android:text="@string/title_product_price"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView_cate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B4CAF50"
            android:text="@string/title_product_cate_id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_product_cate_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#76009688"
            android:text="@string/title_product_image_id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_product_image_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_new" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_save" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_remove" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
